hphp/test/zend/bad/Zend/tests/incompat_ctx_user.php
<?php

class A {
	    function foo() { var_dump(get_class($this)); }
}
class B {
	   function bar() { A::foo(); }
}
$b = new B;
$b->bar();

?>
